# insight-api

./: .coverage  .dockerignore  .gitignore  .pdm.toml  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
documentation/infra/: account_mongo_repository.md
documentation/presentation/controllers/: login.md
documentation/validation/: validation_composite.md
src/data/params/: __init__.py  add_account_repository_params.py  add_glasses_repository_params.py  add_image_repository_params.py  delete_glasses_repository_params.py  delete_image_repository_params.py  get_glasses_repository_params.py  update_glasses_repository_params.py  update_image_repository_params.py
src/data/usecases/: __init__.py  db_add_account.py  db_add_glasses.py  db_add_image.py  db_authentication.py  db_delete_glasses.py  db_get_glasses.py  db_load_account_by_token.py  db_update_glasses.py  db_update_image.py
src/domain/features/: __init__.py  add_account.py  add_glasses.py  add_image.py  add_images.py  delete_glasses.py  get_glasses.py  load_account_by_token.py  update_glasses.py  update_image.py
src/domain/params/: __init__.py  add_account_params.py  add_glasses_params copy.py  add_glasses_params.py  add_image_params.py  (+5 more)
src/utils/: email_validator_adapter.py
test/domain/: add_account_test.py  add_glasses_test.py  add_image_test.py  add_images_test.py  authentication_test.py  delete_glasses_test.py  get_glasses_test.py  load_account_by_token_test.py  update_glasses_test.py  update_image_test.py
test/utils/: email_validator_adapter_test.py
(+194 files in other folders)
