[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mades Eladrian", email = "mades.eladrian@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.21.0",
    "mypy>=0.991",
]
