[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mades Eladrian", email = "mades.eladrian@gmail.com"},
]
dependencies = [
    "passlib[bcrypt]>=1.7.4",
    "firebase-admin>=6.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.21.0",
    "mypy>=0.991",
    "flake8>=6.0.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "faker>=15.3.4",
    "mock-firestore>=0.11.0",
]
